--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.6",
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/markdoc": "^0.11.5",
+    "@astrojs/netlify": "^5.5.4",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
+    "@astrolib/seo": "^1.0.0-beta.8",
+    "@types/alpinejs": "^3.13.10",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "alpinejs": "^3.14.3",
+    "astro": "^4.16.6",
+    "astro-expressive-code": "^0.37.1",
+    "astro-icon": "^1.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
 }
