--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "astro": "^4.16.6",
     "astro-expressive-code": "^0.37.1",
     "astro-icon": "^1.1.1",
+    "astro-seo": "^0.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.14",
